--- a/index.html
+++ b/index.html
@@ -1049,8 +1049,8 @@
 <!-- Настройка URL API (укажите публичный URL вашего API сервера) -->
 <!-- Для локальной разработки (localhost) настройка не требуется -->
 <!-- Для GitHub Pages раскомментируйте и укажите ваш публичный URL API: -->
-<!-- <script>
-  window.API_URL = 'https://your-api-domain.com'; // Замените на ваш публичный URL API
+<script>
+  window.API_URL = 'https://unsegmentary-jayna-unlucky.ngrok-free.dev/pc_salon/api'; // Замените на ваш публичный URL API
 </script> -->
 <!-- API модуль (загружается перед основным скриптом) -->
 <script src="js/api.js"></script>
