Initial commit: PC Salon Telegram Mini App with test order

--- a/index.html
+++ b/index.html
@@ -999,8 +999,8 @@
           </div>
           <div class="bg-slate-700 bg-opacity-50 rounded-lg p-4 border border-amber-700 mb-6">
             <p class="text-amber-300 font-medium mb-2">Контакты менеджера:</p>
-            <p class="text-white mb-1"><i class="fas fa-phone text-amber-400 mr-2"></i>+7 (999) 123-45-67</p>
-            <p class="text-white"><i class="fas fa-envelope text-amber-400 mr-2"></i>manager@pc-salon.ru</p>
+            <p class="text-white mb-1"><i class="fas fa-phone text-amber-400 mr-2"></i>@JinYoKi</p>
+            <p class="text-white"><i class="fas fa-envelope text-amber-400 mr-2"></i>Evgeniy</p>
           </div>
           <button id="close-order-success-modal" class="w-full bg-gradient-to-r from-amber-600 to-yellow-600 hover:from-amber-700 hover:to-yellow-700 text-slate-900 py-3 rounded-xl font-bold transition transform hover:scale-105">
             Понятно
@@ -1096,7 +1096,8 @@
 <!-- ВАЖНО: После запуска ngrok обновите этот URL на ваш новый ngrok URL -->
 <!-- Формат: https://ваш-ngrok-url.ngrok-free.dev/pc_salon/api -->
 <script>
-  window.API_URL = 'https://unsegmentary-jayna-unlucky.ngrok-free.dev/pc_salon/api'; // Замените на ваш публичный URL API после запуска ngrok
+  // Актуальный публичный URL API (ngrok)
+  window.API_URL = 'https://unsegmentary-jayna-unlucky.ngrok-free.dev/pc_salon/api';
 </script>
 <!-- API модуль (загружается перед основным скриптом) -->
 <script src="js/api.js"></script>
